...
                            </TouchableOpacity>
                            <TouchableOpacity
                                style={{ flex: 1, height: 48, borderRadius: 12, alignItems: 'center', justifyContent: 'center', backgroundColor: '#7367F0' }}
                                onPress={handleSaveCategory}
                                disabled={savingCat}
                            >
                                {savingCat ? <ActivityIndicator color="#fff" /> : <Text style={{ color: '#fff', fontWeight: 'bold' }}>Adicionar</Text>}
                            </TouchableOpacity>
                        </View>
                    </View>
                </View>
            </Modal>

...
